--- a/assets/pages/stanislav.html
+++ b/assets/pages/stanislav.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Станислав Лабенский - QA Engineer | Киноклуб "ОДИССЕЯ"</title>
-    <link rel="stylesheet" href="../../assets/css/style.css">
-    <link rel="stylesheet" href="../../assets/css/seasons.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/seasons.css">
+    <link rel="stylesheet" href="../modul/navigation.css">
     <meta name="description" content="Станислав Лабенский - Middle QA Engineer с опытом в ручном и автоматизированном тестировании">
     <meta name="keywords" content="QA Engineer, тестирование, автоматизация, JavaScript, Playwright">
     <style>
@@ -616,57 +617,14 @@
 
     <!-- Шапка -->
     <header class="header">
-        <a href="../../index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
+        <a href="index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
             <div class="logo__icon"></div>
             ОДИССЕЯ
         </a>
-        <nav class="nav" aria-label="Основная навигация">
-            <!-- Главная -->
-            <div class="nav-dropdown">
-                <a href="../../index.html" class="nav__link dropdown-toggle">
-                    Главная
-                    <svg width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
-                        <path d="M3 4.5L6 7.5L9 4.5H3Z" />
-                    </svg>
-                </a>
-                <div class="dropdown-menu">
-                    <a href="../../index.html#about" class="dropdown-item">О киноклубе</a>
-                    <a href="../../index.html#top-films" class="dropdown-item">Топы</a>
-                    <a href="../../index.html#contacts" class="dropdown-item">Контакты</a>
-                    <a href="../../index.html#film-archive" class="dropdown-item">Фильмы</a>
-                </div>
-            </div>
 
-            <!-- Настройка устройств -->
-            <div class="nav-dropdown">
-                <a href="setup-guide.html" class="nav__link dropdown-toggle">
-                    Настройка устройств
-                    <svg width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
-                        <path d="M3 4.5L6 7.5L9 4.5H3Z" />
-                    </svg>
-                </a>
-                <div class="dropdown-menu">
-                    <a href="setup-guide.html#tv-setup" class="dropdown-item">Телевизоры</a>
-                    <a href="setup-guide.html#pc-setup" class="dropdown-item">Компьютеры</a>
-                    <a href="setup-guide.html#phone-setup" class="dropdown-item">Телефоны</a>
-                </div>
-            </div>
+        <!-- Контейнер для навигации -->
+        <div class="nav-container"></div>
 
-            <!-- Игры -->
-            <div class="nav-dropdown">
-                <a href="" class="nav__link dropdown-toggle active">
-                    Игры
-                    <svg width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
-                        <path d="M3 4.5L6 7.5L9 4.5H3Z" />
-                    </svg>
-                </a>
-                <div class="dropdown-menu">
-                    <a href="quiz.html" class="dropdown-item">Квиз Odissea<sup class="demo-badge">DEMO</sup></a>
-                    <a href="Interactive-game.html" class="dropdown-item">Интерактивная игра</a>
-                    <a href="crocodile-game.html" class="dropdown-item">Крокодил<sup class="demo-tiny">NEW</sup></a>
-                </div>
-            </div>
-        </nav>
         <button class="mobile-menu-btn" aria-label="Меню" aria-expanded="false">☰</button>
     </header>
 
@@ -1015,12 +973,13 @@
 
         <!-- Кнопка возврата внизу -->
         <div class="odyssey-home-button">
-            <a href="../../index.html" class="odyssey-btn">← Вернуться на главную Одиссея</a>
+            <a href="index.html" class="odyssey-btn">← Вернуться на главную Одиссея</a>
         </div>
     </div>
 
-    <script src="../../assets/js/seasons.js"></script>
-    <script src="../../assets/js/navigation.js"></script>
+    <script src="../js/seasons.js"></script>
+    <script src="../js/navigation.js"></script>
+    <script src="../modul/navigation.js"></script>
     <script>
         // Функция для открытия модального окна с изображением
         function openModal(imageSrc) {
