--- a/assets/pages/crocodile-game.html
+++ b/assets/pages/crocodile-game.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/seasons.css">
     <link rel="stylesheet" href="../css/crocodile-game.css">
+    <link rel="stylesheet" href="../modul/navigation.css">
     <meta name="description"
         content="Игра в Крокодила - веселая командная игра для вечеринок. Показывай, рисуй или объясняй слова без слов!">
     <meta name="keywords" content="крокодил, игра, слова, команды, вечеринка, киноклуб">
@@ -18,57 +19,14 @@
 
     <!-- Шапка -->
     <header class="header">
-        <a href="../../index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
+        <a href="index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
             <div class="logo__icon"></div>
             ОДИССЕЯ
         </a>
-        <nav class="nav" aria-label="Основная навигация">
-            <!-- Главная -->
-            <div class="nav-dropdown">
-                <a href="../../index.html" class="nav__link dropdown-toggle">
-                    Главная
-                    <svg width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
-                        <path d="M3 4.5L6 7.5L9 4.5H3Z" />
-                    </svg>
-                </a>
-                <div class="dropdown-menu">
-                    <a href="../../index.html#about" class="dropdown-item">О киноклубе</a>
-                    <a href="../../index.html#top-films" class="dropdown-item">Топы</a>
-                    <a href="../../index.html#contacts" class="dropdown-item">Контакты</a>
-                    <a href="../../index.html#film-archive" class="dropdown-item">Фильмы</a>
-                </div>
-            </div>
 
-            <!-- Настройка устройств -->
-            <div class="nav-dropdown">
-                <a href="setup-guide.html" class="nav__link dropdown-toggle">
-                    Настройка устройств
-                    <svg width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
-                        <path d="M3 4.5L6 7.5L9 4.5H3Z" />
-                    </svg>
-                </a>
-                <div class="dropdown-menu">
-                    <a href="setup-guide.html#tv-setup" class="dropdown-item">Телевизоры</a>
-                    <a href="setup-guide.html#pc-setup" class="dropdown-item">Компьютеры</a>
-                    <a href="setup-guide.html#phone-setup" class="dropdown-item">Телефоны</a>
-                </div>
-            </div>
+        <!-- Контейнер для навигации -->
+        <div class="nav-container"></div>
 
-            <!-- Игры -->
-            <div class="nav-dropdown">
-                <a href="" class="nav__link dropdown-toggle active">
-                    Игры
-                    <svg width="12" height="12" viewBox="0 0 12 12" fill="currentColor">
-                        <path d="M3 4.5L6 7.5L9 4.5H3Z" />
-                    </svg>
-                </a>
-                <div class="dropdown-menu">
-                    <a href="quiz.html" class="dropdown-item">Квиз Odissea<sup class="demo-badge">DEMO</sup></a>
-                    <a href="Interactive-game.html" class="dropdown-item">Интерактивная игра</a>
-                    <a href="crocodile-game.html" class="dropdown-item">Крокодил<sup class="demo-tiny">NEW</sup></a>
-                </div>
-            </div>
-        </nav>
         <button class="mobile-menu-btn" aria-label="Меню" aria-expanded="false">☰</button>
     </header>
 
@@ -321,7 +279,7 @@
                 <a href="#rules" class="footer__link">Правила</a>
                 <a href="#game-start" class="footer__link">Играть</a>
                 <a href="#about" class="footer__link">Советы</a>
-                <a href="../../index.html" class="footer__link">Главная</a>
+                <a href="index.html" class="footer__link">Главная</a>
             </div>
             <div class="footer__social">
                 <a href="https://vk.com/club199046020" target="_blank" rel="noopener noreferrer" class="social__link"
@@ -339,7 +297,7 @@
     <!-- Подключаем скрипты -->
     <script src="../js/seasons.js"></script>
     <script src="../js/crocodile-game.js"></script>
-
+    <script src="../modul/navigation.js"></script>
 </body>
 
 </html>
