--- a/assets/pages/quiz.html
+++ b/assets/pages/quiz.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/quiz.css">
     <link rel="stylesheet" href="../css/seasons.css">
     <link rel="stylesheet" href="../modul/navigation.css">
+    <link rel="stylesheet" href="../modul/hero-section.css">
     <meta name="description"
         content="Квиз Odissea - проверьте свои знания о кино! Увлекательная викторина от киноклуба Одиссея.">
     <meta name="keywords" content="кино, квиз, викторина, тест, фильмы, Одиссея">
@@ -31,27 +32,7 @@
     </header>
 
     <!-- Герой секция -->
-    <section class="hero quiz-hero">
-        <div class="hero__content">
-            <h1 class="hero__title">Квиз Odissea</h1>
-            <p class="hero__subtitle">Проверь свои знания о кино!</p>
-            <div class="hero__cta">
-                <a href="#quiz-start" class="btn btn--primary">Начать квиз</a>
-                <a href="#quiz-rules" class="btn btn--outline">
-                    <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true">
-                        <path
-                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v6h-2zm0 8h2v2h-2z"
-                            fill="currentColor" />
-                    </svg>
-                    Правила
-                </a>
-            </div>
-        </div>
-        <div class="hero__image">
-            <img src="../images/quiz-hero.jpg" alt="Квиз Odissea - проверь свои знания о кино" class="hero__image-img"
-                width="600" height="400" loading="lazy">
-        </div>
-    </section>
+    <div class="hero-container"></div>
 
     <!-- Правила квиза -->
     <section id="quiz-rules" class="quiz-rules">
@@ -149,6 +130,7 @@
     <script src="../js/seasons.js"></script>
     <script src="../js/quiz.js"></script>
     <script src="../modul/navigation.js"></script>
+    <script src="../modul/hero-section.js"></script>
     <button id="scroll-to-top" class="load-more-btn" aria-label="Наверх" title="Наверх">
         ↑
     </button>
