--- a/assets/pages/setup-guide.html
+++ b/assets/pages/setup-guide.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/seasons.css">
     <link rel="stylesheet" href="../css/setup-guide.css">
     <link rel="stylesheet" href="../modul/navigation.css">
+    <link rel="stylesheet" href="../modul/hero-section.css">
     <meta name="description"
         content="Инструкции по настройке телевизоров, компьютеров и телефонов для оптимального просмотра фильмов">
     <meta name="keywords" content="настройка, телевизор, компьютер, телефон, просмотр фильмов, калибровка">
@@ -31,22 +32,7 @@
     </header>
 
     <!-- Герой секция -->
-    <section class="hero">
-        <div class="hero__content">
-            <h1 class="hero__title">Смотри с комфором</h1>
-            <p class="hero__subtitle">Настройка устройств для комфортного просмотра</p>
-            <div class="hero__cta">
-                <a href="#tv-setup" class="btn btn--primary">Телевизоры</a>
-                <a href="#pc-setup" class="btn btn--outline">Компьютеры</a>
-                <a href="#phone-setup" class="btn btn--outline">Телефоны</a>
-            </div>
-        </div>
-        <div class="hero__image">
-            <img src="../../assets/images/setup/device-setup.png" alt="Различные устройства для просмотра фильмов"
-                class="hero__image-img" width="600" height="400" loading="lazy"
-                onerror="this.src='../../assets/images/default-poster.jpg'">
-        </div>
-    </section>
+    <div class="hero-container"></div>
 
     <!-- Навигация по разделам -->
     <section class="setup-nav">
@@ -1088,6 +1074,7 @@
     <!-- Подключаем полноценный скрипт сезонных эффектов -->
     <script src="../js/seasons.js"></script>
     <script src="../modul/navigation.js"></script>
+    <script src="../modul/hero-section.js"></script>
 
     <!-- Упрощенный скрипт только для функциональности этой страницы -->
     <script>
