--- a/assets/pages/crocodile-game.html
+++ b/assets/pages/crocodile-game.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/seasons.css">
     <link rel="stylesheet" href="../css/crocodile-game.css">
     <link rel="stylesheet" href="../modul/navigation.css">
+    <link rel="stylesheet" href="../modul/hero-section.css">
     <meta name="description"
         content="Игра в Крокодила - веселая командная игра для вечеринок. Показывай, рисуй или объясняй слова без слов!">
     <meta name="keywords" content="крокодил, игра, слова, команды, вечеринка, киноклуб">
@@ -31,28 +32,7 @@
     </header>
 
     <!-- Герой секция -->
-    <section class="hero">
-        <div class="hero__content">
-            <h1 class="hero__title">Крокодил</h1>
-            <p class="hero__subtitle">Покажи, нарисуй или объясни без слов!</p>
-            <div class="hero__cta">
-                <a href="#game-start" class="btn btn--primary">Начать игру</a>
-                <a href="#rules" class="btn btn--outline">
-                    <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true">
-                        <path
-                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v6h-2zm0 8h2v2h-2z"
-                            fill="currentColor" />
-                    </svg>
-                    Правила
-                </a>
-            </div>
-        </div>
-        <div class="hero__image">
-            <img src="../images/crocodile-hero.jpg" alt="Игра в Крокодил - веселая командная игра"
-                class="hero__image-img" width="600" height="400" loading="lazy"
-                onerror="this.src='../images/default-poster.jpg'">
-        </div>
-    </section>
+<div class="hero-container"></div>
 
     <!-- Правила игры -->
     <section id="rules" class="about">
@@ -298,6 +278,7 @@
     <script src="../js/seasons.js"></script>
     <script src="../js/crocodile-game.js"></script>
     <script src="../modul/navigation.js"></script>
+    <script src="../modul/hero-section.js"></script>
 </body>
 
 </html>
