--- a/assets/pages/Interactive-game.html
+++ b/assets/pages/Interactive-game.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="../css/seasons.css">
     <link rel="stylesheet" href="../modul/navigation.css">
     <link rel="stylesheet" href="../modul/hero-section.css">
+    <link rel="stylesheet" href="../modul/footer-module.css">
+    <link rel="stylesheet" href="../modul/seasons-effects.css">
     <meta name="description"
         content="Киноквест Odissea - интерактивный городской квест для любителей кино. Находи коды, отвечай на вопросы, становись легендой!">
     <meta name="keywords" content="киноквест, геоквест, Одиссея, киноклуб, игра, локации, коды">
 </head>
 
 <body>
-    <div class="seasons-container" id="seasons-container"></div>
-
     <!-- Шапка -->
     <header class="header">
         <a href="index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
@@ -314,30 +314,13 @@
     </section>
 
     <!-- Футер -->
-    <footer class="footer">
-        <div class="footer__content">
-            <div class="footer__logo">ODISSEA QUEST</div>
-            <div class="footer__links">
-                <a href="#about-quest" class="footer__link">О квесте</a>
-                <a href="#how-to-play" class="footer__link">Как играть</a>
-                <a href="#rules" class="footer__link">Правила</a>
-                <a href="#prizes" class="footer__link">Призы</a>
-                <a href="#support" class="footer__link">Поддержка</a>
-            </div>
-            <div class="footer__social">
-                <a href="https://vk.com/club199046020" target="_blank" rel="noopener noreferrer" class="social__link"
-                    aria-label="ВКонтакте">VK</a>
-                <a href="https://t.me/Odyssey_Cinema_Club_bot" target="_blank" rel="noopener noreferrer"
-                    class="social__link" aria-label="Telegram">TG</a>
-            </div>
-            <p class="footer__copyright">© 2025 Киноквест "ODISSEA" | Киноклуб "ОДИССЕЯ"</p>
-        </div>
-    </footer>
+    <div id="footer-container"></div>
 
     <script src="../js/seasons.js"></script>
     <script src="../modul/navigation.js"></script>
     <script src="../modul/hero-section.js"></script>
-
+    <script src="../modul/footer-module.js"></script>
+    <script src="../modul/seasons-effects.js"></script>
     <script>
         // Полностью отключаем загрузку данных для этой страницы
         document.addEventListener('DOMContentLoaded', function () {
