--- a/assets/pages/setup-guide.html
+++ b/assets/pages/setup-guide.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="../css/setup-guide.css">
     <link rel="stylesheet" href="../modul/navigation.css">
     <link rel="stylesheet" href="../modul/hero-section.css">
+    <link rel="stylesheet" href="../modul/footer-module.css">
+    <link rel="stylesheet" href="../modul/seasons-effects.css">
     <meta name="description"
         content="Инструкции по настройке телевизоров, компьютеров и телефонов для оптимального просмотра фильмов">
     <meta name="keywords" content="настройка, телевизор, компьютер, телефон, просмотр фильмов, калибровка">
 </head>
 
 <body>
-    <div id="seasons-container" class="seasons-container"></div>
-
     <!-- Шапка -->
     <header class="header">
         <a href="index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
@@ -1048,25 +1048,7 @@
     </div>
 
     <!-- Футер -->
-    <footer class="footer">
-        <div class="footer__content">
-            <div class="footer__logo">ОДИССЕЯ</div>
-            <div class="footer__links">
-                <a href="index.html#about" class="footer__link">О нас</a>
-                <a href="index.html#top-films" class="footer__link">Топы</a>
-                <a href="index.html#film-archive" class="footer__link">Фильмы</a>
-                <a href="index.html#contacts" class="footer__link">Контакты</a>
-                <a href="stanislav.html" class="footer__link">Автор сайта</a>
-            </div>
-            <div class="footer__social">
-                <a href="https://vk.com/club199046020" target="_blank" rel="noopener noreferrer" class="social__link"
-                    aria-label="ВКонтакте">VK</a>
-                <a href="https://t.me/Odyssey_Cinema_Club_bot" target="_blank" rel="noopener noreferrer"
-                    class="social__link" aria-label="Telegram">TG</a>
-            </div>
-            <p class="footer__copyright">© 2025 Киноклуб "ОДИССЕЯ". Все права защищены.</p>
-        </div>
-    </footer>
+    <div id="footer-container"></div>
 
     <!-- Кнопка наверх -->
     <button id="scroll-to-top" class="load-more-btn" aria-label="Наверх" title="Наверх">↑</button>
@@ -1075,6 +1057,8 @@
     <script src="../js/seasons.js"></script>
     <script src="../modul/navigation.js"></script>
     <script src="../modul/hero-section.js"></script>
+    <script src="../modul/footer-module.js"></script>
+    <script src="../modul/seasons-effects.js"></script>
 
     <!-- Упрощенный скрипт только для функциональности этой страницы -->
     <script>
