--- a/assets/pages/quiz.html
+++ b/assets/pages/quiz.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="../css/seasons.css">
     <link rel="stylesheet" href="../modul/navigation.css">
     <link rel="stylesheet" href="../modul/hero-section.css">
+    <link rel="stylesheet" href="../modul/footer-module.css">
+    <link rel="stylesheet" href="../modul/seasons-effects.css">
     <meta name="description"
         content="Квиз Odissea - проверьте свои знания о кино! Увлекательная викторина от киноклуба Одиссея.">
     <meta name="keywords" content="кино, квиз, викторина, тест, фильмы, Одиссея">
 </head>
 
 <body>
-    <div class="seasons-container" id="seasons-container"></div>
-
     <!-- Шапка -->
     <header class="header">
         <a href="index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
@@ -106,34 +106,15 @@
     </section>
 
     <!-- Футер -->
-    <footer class="footer">
-        <div class="footer__content">
-            <div class="footer__logo">ОДИССЕЯ</div>
-            <div class="footer__links">
-                <a href="index.html#about" class="footer__link">О нас</a>
-                <a href="index.html#top-films" class="footer__link">Топы</a>
-                <a href="index.html#film-archive" class="footer__link">Фильмы</a>
-                <a href="index.html#contacts" class="footer__link">Контакты</a>
-                <a href="stanislav.html" class="footer__link">Автор сайта</a>
-            </div>
-            <div class="footer__social">
-                <a href="https://vk.com/club199046020" target="_blank" rel="noopener noreferrer" class="social__link"
-                    aria-label="ВКонтакте">VK</a>
-                <a href="https://t.me/Odyssey_Cinema_Club_bot" target="_blank" rel="noopener noreferrer"
-                    class="social__link" aria-label="Telegram">TG</a>
-            </div>
-            <p class="footer__copyright">© 2025 Киноклуб "ОДИССЕЯ".</p>
-        </div>
-    </footer>
+    <div id="footer-container"></div>
 
     <script src="../js/script.js"></script>
     <script src="../js/seasons.js"></script>
     <script src="../js/quiz.js"></script>
     <script src="../modul/navigation.js"></script>
     <script src="../modul/hero-section.js"></script>
-    <button id="scroll-to-top" class="load-more-btn" aria-label="Наверх" title="Наверх">
-        ↑
-    </button>
+    <script src="../modul/footer-module.js"></script>
+    <script src="../modul/seasons-effects.js"></script>
 </body>
 
 </html>
