--- a/assets/pages/stanislav.html
+++ b/assets/pages/stanislav.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/seasons.css">
     <link rel="stylesheet" href="../modul/navigation.css">
+    <link rel="stylesheet" href="../modul/footer-module.css">
+    <link rel="stylesheet" href="../modul/seasons-effects.css">
     <meta name="description" content="Станислав Лабенский - Middle QA Engineer с опытом в ручном и автоматизированном тестировании">
     <meta name="keywords" content="QA Engineer, тестирование, автоматизация, JavaScript, Playwright">
     <style>
@@ -977,9 +979,14 @@
         </div>
     </div>
 
+    <!-- Футер -->
+    <div id="footer-container"></div>
+
     <script src="../js/seasons.js"></script>
     <script src="../js/navigation.js"></script>
     <script src="../modul/navigation.js"></script>
+    <script src="../modul/footer-module.js"></script>
+    <script src="../modul/seasons-effects.js"></script>
     <script>
         // Функция для открытия модального окна с изображением
         function openModal(imageSrc) {
