--- a/assets/pages/crocodile-game.html
+++ b/assets/pages/crocodile-game.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../modul/hero-section.css">
     <link rel="stylesheet" href="../modul/footer-module.css">
     <link rel="stylesheet" href="../modul/seasons-effects.css">
+    <link rel="stylesheet" href="../modul/scroll-to-top.css">
     <meta name="description"
         content="Игра в Крокодила - веселая командная игра для вечеринок. Показывай, рисуй или объясняй слова без слов!">
     <meta name="keywords" content="крокодил, игра, слова, команды, вечеринка, киноклуб">
@@ -251,9 +252,6 @@
         </div>
     </section>
 
-    <!-- Кнопка наверх -->
-    <button id="scroll-to-top" class="load-more-btn" aria-label="Наверх" title="Наверх">↑</button>
-
     <!-- Футер -->
     <div id="footer-container"></div>
 
@@ -264,6 +262,7 @@
     <script src="../modul/hero-section.js"></script>
     <script src="../modul/footer-module.js"></script>
     <script src="../modul/seasons-effects.js"></script>
+    <script src="../modul/scroll-to-top.js"></script>
 </body>
 
 </html>
