--- a/assets/pages/Interactive-game.html
+++ b/assets/pages/Interactive-game.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../modul/hero-section.css">
     <link rel="stylesheet" href="../modul/footer-module.css">
     <link rel="stylesheet" href="../modul/seasons-effects.css">
+    <link rel="stylesheet" href="../modul/scroll-to-top.css">
     <meta name="description"
         content="Киноквест Odissea - интерактивный городской квест для любителей кино. Находи коды, отвечай на вопросы, становись легендой!">
     <meta name="keywords" content="киноквест, геоквест, Одиссея, киноклуб, игра, локации, коды">
@@ -321,6 +322,7 @@
     <script src="../modul/hero-section.js"></script>
     <script src="../modul/footer-module.js"></script>
     <script src="../modul/seasons-effects.js"></script>
+    <script src="../modul/scroll-to-top.js"></script>
     <script>
         // Полностью отключаем загрузку данных для этой страницы
         document.addEventListener('DOMContentLoaded', function () {
@@ -395,9 +397,6 @@
         }
     </script>
 
-    <button id="scroll-to-top" class="load-more-btn" aria-label="Наверх" title="Наверх">
-        ↑
-    </button>
 </body>
 
 </html>
