--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../modul/hero-section.css">
     <link rel="stylesheet" href="../modul/footer-module.css">
     <link rel="stylesheet" href="../modul/seasons-effects.css">
+    <link rel="stylesheet" href="../modul/scroll-to-top.css">
     <meta name="description"
         content="Киноклуб Одиссея - место для настоящих ценителей кино. Обсуждения фильмов, топ-рейтинги и архив встреч.">
     <meta name="keywords" content="кино, киноклуб, фильмы, обсуждение, рейтинги, Одиссея">
@@ -261,6 +262,7 @@
     <script src="../modul/hero-section.js"></script>
     <script src="../modul/footer-module.js"></script>
     <script src="../modul/seasons-effects.js"></script>
+    <script src="../modul/scroll-to-top.js"></script>
 </body>
 
 </html>
