--- a/assets/pages/quiz.html
+++ b/assets/pages/quiz.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../modul/hero-section.css">
     <link rel="stylesheet" href="../modul/footer-module.css">
     <link rel="stylesheet" href="../modul/seasons-effects.css">
+    <link rel="stylesheet" href="../modul/scroll-to-top.css">
     <meta name="description"
         content="Квиз Odissea - проверьте свои знания о кино! Увлекательная викторина от киноклуба Одиссея.">
     <meta name="keywords" content="кино, квиз, викторина, тест, фильмы, Одиссея">
@@ -115,6 +116,7 @@
     <script src="../modul/hero-section.js"></script>
     <script src="../modul/footer-module.js"></script>
     <script src="../modul/seasons-effects.js"></script>
+    <script src="../modul/scroll-to-top.js"></script>
 </body>
 
 </html>
