--- a/assets/pages/setup-guide.html
+++ b/assets/pages/setup-guide.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../modul/hero-section.css">
     <link rel="stylesheet" href="../modul/footer-module.css">
     <link rel="stylesheet" href="../modul/seasons-effects.css">
+    <link rel="stylesheet" href="../modul/scroll-to-top.css">
     <meta name="description"
         content="Инструкции по настройке телевизоров, компьютеров и телефонов для оптимального просмотра фильмов">
     <meta name="keywords" content="настройка, телевизор, компьютер, телефон, просмотр фильмов, калибровка">
@@ -1050,15 +1051,13 @@
     <!-- Футер -->
     <div id="footer-container"></div>
 
-    <!-- Кнопка наверх -->
-    <button id="scroll-to-top" class="load-more-btn" aria-label="Наверх" title="Наверх">↑</button>
-
     <!-- Подключаем полноценный скрипт сезонных эффектов -->
     <script src="../js/seasons.js"></script>
     <script src="../modul/navigation.js"></script>
     <script src="../modul/hero-section.js"></script>
     <script src="../modul/footer-module.js"></script>
     <script src="../modul/seasons-effects.js"></script>
+    <script src="../modul/scroll-to-top.js"></script>
 
     <!-- Упрощенный скрипт только для функциональности этой страницы -->
     <script>
